<resources>
    <string name="app_name">TutorFinder</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="favorites">Favorites</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="tutors">Tutors</string>
    <string name="filter">Filter</string>
    <string name="tutor_image">tutor image</string>
    <string name="first_last">First Last</string>
    <string name="_50_hr">$50/hr</string>
    <string name="_5_0_rating">5.0 Rating</string>
    <string name="subjects">Subjects</string>
    <string name="profile">Profile</string>
    <string name="profile_image">profile image</string>
    <string name="about_me_fill_in">I am a junior at Columbia University majoring in Computer Science and Philosophy. I have been tutoring computer science since I was a senior in high school. My specialties are in tutoring courses such as Intro Java and Data Structures, with some Calculus on the side.</string>
    <string name="sun">SUN</string>
    <string name="time">time</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_question">What subject do you need help with?</string>
    <string name="account">Account</string>
    <string name="location">location</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="schedule_availability_question">What days are you available?</string>
    <string name="select_subject_question">What subjects are you proficient in?</string>
    <string name="about_question">Tell us about your qualifications.</string>
    <string name="tutor_form">Tutor Form</string>
    <string name="next">Next</string>
    <string name="where_do_you_live">Where do you live?</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="state">State</string>
    <string name="apply">Apply</string>
    <string name="session_form">Session Form</string>
    <string name="reset">Reset</string>
    <string name="reviews">Reviews</string>


    <string-array name="spinner_subject">
        <item>English</item>
        <item>Math</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Physics</item>
        <item>History</item>
    </string-array>

    <string-array name="spinner_subject_any">
        <item>Any</item>
        <item>English</item>
        <item>Math</item>
        <item>Chemistry</item>
        <item>Biology</item>
        <item>Physics</item>
        <item>History</item>
    </string-array>

    <string-array name="spinner_mile_radius">
        <item>Any Range</item>
        <item>5 Mile Radius</item>
        <item>10 Mile Radius</item>
        <item>15 Mile Radius</item>
        <item>20 Mile Radius</item>
        <item>25 Mile Radius</item>
    </string-array>

    <string-array name="spinner_items_right">
        <item>Price Ascending</item>
        <item>Price Descending</item>
    </string-array>

</resources>
