<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/cell_profile_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:src="@mipmap/ic_launcher_round"
        app:riv_corner_radius="30dip"
        app:riv_oval="true"
        android:background="@mipmap/ic_launcher_round"
        />
    
    <!--<ImageView-->
        <!--android:id="@+id/cell_profile_picture"-->
        <!--android:contentDescription="@string/tutor_image"-->
        <!--android:layout_width="70dp"-->
        <!--android:layout_height="70dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:background="@mipmap/ic_launcher_round"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tutor_name"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/first_last"
                />

            <TextView
                android:id="@+id/tutor_price"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/_50_hr"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:visibility="visible">

            <View
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/star_rating"/>

            <TextView
                android:id="@+id/tutor_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAlignment="textEnd"
                android:textColor="@color/darkGray"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/_5_0_rating"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tutor_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-22dp"
            android:textAlignment="textEnd"
            android:textColor="@color/darkGray"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/location"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tutor_subject"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/subjects"
            android:textColor="@color/darkGray"
            android:maxLines="2"/>



    </LinearLayout>

</LinearLayout>