<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sign_up"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/black"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/first_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/black"
            android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/last_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/black"
            android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/black"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/black"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/confirm_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/black"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/register_to_home_button"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corner"
        android:text="@string/sign_up"/>

</LinearLayout>