<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/black"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_question"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <Spinner
        android:id="@+id/setting_subject_spinner"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp">

    </Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/filter_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Zipcode"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/black"
            android:maxLength="5"
            android:inputType="number"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/search_welcome"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corner"
        android:text="@string/search"/>


</LinearLayout>